Giraph Change Log

Release 1.2.0 - unreleased
  GIRAPH-986: Add no-arg constructor to BasicSet (ikabiljo via edunov)

  GIRAPH-985: Add more metrics (majakabiljo)

  GIRAPH-986: Add more stuff to TypeOps (ikabiljo via majakabiljo)

  GIRAPH-962: TextAggregatorWriter with frequency AT_THE_END writes in every superstep (mju via majakabiljo)

  GIRAPH-967: (Strongly Connected Components) bug fix (mhan via majakabiljo)
 
  GIRAPH-980 Way to disable checkpoints for particular job and on particular supersteps (edunov)
 
  GIRAPH-983 Remove checkpoint related error messages from console (edunov)

  GIRAPH-978 Giraph-Debugger Test Graphs not working (nishantgandhi99 via edunov)

  GIRAPH-979: Add type of input to 'missing input' error message (majakabiljo)

  GIRAPH-975: In-proc ZooKeeper server with Master process (edunov)

  GIRAPH-977: useMessageSizeEncoding is broken (majakabiljo)

  GIRAPH-976: More command line logging (majakabiljo)
  
  GIRAPH-972: Race condition in checkpointing (edunov)

  GIRAPH-905: Giraph Debugger (netj via edunov)

  GIRAPH-966: Add a way to ignore some thread exceptions (majakabiljo)

  GIRAPH-964: Remove quotes from output partition specification in hive-io (majakabiljo)

  GIRAPH-963: Aggregators may not be initialized properly (edunov via majakabiljo)

  GIRAPH-955: Allow vertex/edge/message value to be configurable (ikabiljo via majakabiljo)

Release 1.1.0 - 2014-11-19
  GIRAPH-961: Internals of MasterLoggingAggregator have been incorrectly removed

  GIRAPH-938: Allow fast working with primitives generically (ikabiljo via pavanka)

  GIRAPH-945: Always use job Configuration to create Configuration (majakabiljo)

  GIRAPH-931: Provide a Strongly Connected Components algorithm (gianluca via majakabiljo)

  GIRAPH-933: Checkpointing improvements (edunov via majakabiljo)

  GIRAPH-943: Perf regression due to netty 4.0.21 (pavanka)

  GIRAPH-935: Loosen modifiers when needed (ikabiljo via majakabiljo)
