@@ -99,7 +99,7 @@ public class WorkerAggregatorHandler implements WorkerThreadGlobalCommUsage {
     if (reducer != null) {
       progressable.progress();
       synchronized (reducer) {
-        reducer.reduceSingle(value);
+        reducer.reduce(value);
       }
     } else {
       throw new IllegalStateException("reduce: " +
@@ -114,12 +114,12 @@ public class WorkerAggregatorHandler implements WorkerThreadGlobalCommUsage {
    * @param valueToReduce Partial value to reduce
    */
   @Override
-  public void reducePartial(String name, Writable valueToReduce) {
+  public void reduceMerge(String name, Writable valueToReduce) {
     Reducer<Object, Writable> reducer = reducerMap.get(name);
     if (reducer != null) {
       progressable.progress();
       synchronized (reducer) {
-        reducer.reducePartial(valueToReduce);
+        reducer.reduceMerge(valueToReduce);
       }
     } else {
       throw new IllegalStateException("reduce: " +
@@ -321,7 +321,7 @@ public class WorkerAggregatorHandler implements WorkerThreadGlobalCommUsage {
       Reducer<Object, Writable> reducer = threadReducerMap.get(name);
       if (reducer != null) {
         progressable.progress();
-        reducer.reduceSingle(value);
+        reducer.reduce(value);
       } else {
         throw new IllegalStateException("reduce: " +
             AggregatorUtils.getUnregisteredAggregatorMessage(name,
@@ -330,13 +330,13 @@ public class WorkerAggregatorHandler implements WorkerThreadGlobalCommUsage {
     }
 
     @Override
-    public void reducePartial(String name, Writable value) {
+    public void reduceMerge(String name, Writable value) {
       Reducer<Object, Writable> reducer = threadReducerMap.get(name);
       if (reducer != null) {
         progressable.progress();
-        reducer.reducePartial(value);
+        reducer.reduceMerge(value);
       } else {
-        throw new IllegalStateException("reducePartial: " +
+        throw new IllegalStateException("reduceMerge: " +
             AggregatorUtils.getUnregisteredAggregatorMessage(name,
                 threadReducerMap.size() != 0, conf));
       }
@@ -353,7 +353,7 @@ public class WorkerAggregatorHandler implements WorkerThreadGlobalCommUsage {
       // WorkerAggregatorHandler
       for (Entry<String, Reducer<Object, Writable>> entry :
           threadReducerMap.entrySet()) {
-        WorkerAggregatorHandler.this.reducePartial(entry.getKey(),
+        WorkerAggregatorHandler.this.reduceMerge(entry.getKey(),
             entry.getValue().getCurrentValue());
       }
     }
